mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
/* ... */
div.v-button-nonPopupIndicator div.v-popup-indicator {
	display: none;
}

.v-button-bluebtn .v-button-wrap,.v-button-bluebtn.v-disabled .v-button-wrap
	{
	background-image: none;
}

.v-button-bluebtn:hover {
	background: url("icons/grad-dark-bottom.png") repeat-x left bottom
		#146cfd;
	/* 	background-color: #146cfd; */
	/* 	background-image: -webkit-gradient(linear,left top,left bottom,from(#146cfd),to(#216be7)); */
	/* 	background-image: -webkit-linear-gradient(top,#146cfd,#216be7); */
	/* 	background-image: -moz-linear-gradient(top,#146cfd,#216be7); */
	/* 	background-image: -ms-linear-gradient(top,#146cfd,#216be7); */
	/* 	background-image: -o-linear-gradient(top,#146cfd,#216be7); */
	/* 	background-image: linear-gradient(top,#146cfd,#216be7); */
	/* 	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#146cfd',EndColorStr='#216be7'); */
	border: 1px solid #2F5BB7;
	/*     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1); */
}

.v-button-link.medium-text .v-button-caption {
	font-size: 14px;
}

.list-view .v-table-header td,.list-view .v-table-header-wrap {
	height: 22px;
}

.list-view .v-table-header .v-table-resizer {
	height: 1.8em;
}

.list-view .v-table-header .v-table-caption-container {
	padding-top: 2px;
}

.v-table-cell-wrapper {
	white-space: normal;
}

.v-table-caption-container,.v-table-header-drag {
	padding-top: 0px;
}

.v-ratingstars-wrapper {
	border: 0px !important;
	padding: 0px !important;
}

.clear {
	clear: both;
}

.action-label {
	padding-top: 2px;
}

.v-button-link:focus .v-button-caption,.v-button-borderless:focus .v-button-caption
	{
	border: none;
	margin: 0px;
}

.v-button-link.v-button-wordWrap {
 	width: 100%;
}

.v-button-link.no-margin {
	margin: 0px;
}

.v-button-link.no-margin .v-button-wrap {
	padding: 0px;
}

.v-button-link.v-button-wordWrap .v-button-wrap {
	width: 100%;
	display: inline-block;
}

.v-button-link.v-button-wordWrap .v-button-caption {
	display: inline-block;
	white-space: normal;
	word-wrap: break-word;
	word-break: normal;
	width: 100%;
	height: 100%;
}

.v-button .v-button-caption {
	line-height: 16px;
}

.h-sidebar-menu {
	height: 30px;
	background: url("icons/grad-dark-bottom.png") repeat-x left bottom
		#F3F3F3;
	/*     background: -moz-linear-gradient(top,#F3F3F3 0,#C6C6C6 100%); */
	/*     background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#F3F3F3),color-stop(100%,#C6C6C6)); */
	/*     background: -webkit-linear-gradient(top,#F3F3F3 0,#C6C6C6 100%); */
	/*     background: -o-linear-gradient(top,#F3F3F3 0,#C6C6C6 100%); */
	/*     background: -ms-linear-gradient(top,#F3F3F3 0,#C6C6C6 100%); */
	/*     background: linear-gradient(to bottom,#F3F3F3 0,#C6C6C6 100%); */
	/*     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F3F3F3',endColorstr='#C6C6C6',GradientType=0); */
	border: 1px solid #8F8F8F;
	border-radius: 3px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-o-border-radius: 3px;
	/*     box-shadow: 0px 1px 2px 1px #D2D2D2; */
	/*     -webkit-box-shadow: 0px 1px 2px 1px #D2D2D2; */
	/*     -moz-box-shadow: 0px 1px 2px 1px #D2D2D2; */
}

.h-sidebar-menu .v-csslayout-container {
	height: 30px;
}

.h-sidebar-menu .v-csslayout-container .v-button-link,.h-sidebar-menu .v-csslayout-container .v-button-link:active,.h-sidebar-menu .v-csslayout-container .v-button-link:focus
	{
	color: #4D4D4D;
	height: 30px;
	margin: 0px;
	padding: 0px;
}

.h-sidebar-menu .v-csslayout-container .v-button-link:active .v-button-wrap,.h-sidebar-menu .v-csslayout-container .v-button-link:focus .v-button-wrap
	{
	padding: 0px 20px;
	border-right: 1px solid #8F8F8F;
}

.h-sidebar-menu .v-csslayout-container .v-button,.h-sidebar-menu .v-csslayout-container .v-button .v-button-wrap
	{
	border-radius: 0px;
	box-shadow: initial;
	-webkit-box-shadow: initial;
	-moz-box-shadow: initial;
}

.h-sidebar-menu .v-csslayout-container .v-button-link .v-button-wrap,.h-sidebar-menu .v-csslayout-container .v-popupbutton .v-button-wrap,.h-sidebar-menu .v-csslayout-container .v-popupbutton:active .v-button-wrap
	{
	margin: 7px auto 0px;
	display: block;
	padding: 0px 20px;
	border-right: 1px solid #8F8F8F;
	height: 16px;
}

.h-sidebar-menu .v-csslayout-container .v-button-link .v-button-caption
	{
	text-decoration: none;
	color: #5E5E5E;
	text-shadow: #F0F0F0 0 1px 0;
	font-weight: bold;
}

.h-sidebar-menu .v-csslayout-container .v-button-link.isSelected .v-button-caption,.h-sidebar-menu .v-csslayout-container .v-button-link.isSelected .v-button-caption:hover
	{ /*color: #287ECE;*/
	color: #0a58cd;
}

.h-sidebar-menu .v-csslayout-container .v-button-link .v-button-caption:hover
	{
	color: #333;
}

.listControl {
	margin-top: 3px;
}

.pagedtable .v-table-header td:last-child .v-table-resizer {
	border-right-width: 0px;
}

input.v-textfield-pagedtable-pagefield {
	margin-top: 1px;
}

input.v-textfield[type="text"],textarea.v-textarea,.v-filterselect {
	padding: 3px 3px 4px;
}

.v-textfield.v-readonly {
	border: 1px solid gray;
}

.v-textfield.noBorderRight {
	border-right-style: none;
}

.v-datefield-button {
	padding: 3px 0 4px;
	border-radius: 0px 2px 2px 0px;
}

/* Top Menu */
.topNavigation {
	background-color: #FFF;
}
#topNavigation {
	height: 40px;
	background: #FFF;
	background: -moz-linear-gradient(top, #444 0, #222 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #444),
		color-stop(100%, #222) );
	background: -webkit-linear-gradient(top, #444 0, #222 100%);
	background: -o-linear-gradient(top, #444 0, #222 100%);
	background: -ms-linear-gradient(top, #444 0, #222 100%);
	background: linear-gradient(to bottom, #444 0, #222 100%);
	filter: progid : DXImageTransform.Microsoft.gradient ( startColorstr =
		'#444444', endColorstr = '#222222', GradientType = 0 );
	/*     box-shadow: 0px 0px 2px 2px #444; */
}

#topNavigation .v-button,#topNavigation .v-button .v-button-wrap {
	border-radius: 0px;
	box-shadow: initial;
	-webkit-box-shadow: initial;
	-moz-box-shadow: initial;
}
/* ... */

